--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,9 +1,3 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : May 20, 2024, 11:58:39 AM
-    Author     : PC
-*/
-
+.error{
+    color: red;
+}
